Fixed ancient layout issue.

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -330,6 +330,7 @@ div.preventrylink a {
   display: block;
   padding-top: 2px;
   font-family: sans-serif;
+  margin-bottom: 0.5em;
 }
 
 .entrymetainfo a {
